Spacing fixes.

--- a/styles/big-section.css
+++ b/styles/big-section.css
@@ -3,7 +3,7 @@
 }
 
 .big-section {
-  margin: 5em 0;
+  margin: 2em 0;
 }
 
 .big-section h3 {
