--- a/styles/content.css
+++ b/styles/content.css
@@ -2,8 +2,8 @@
 @import url('big-section.css');
 
 .content {
-  margin: 2em;
-  padding-bottom: 10em;
+  padding: 2em;
+  padding-bottom: 5em;
   display: flex;
   flex-direction: column;
 }
